--- a/bench-viewer/Cargo.toml
+++ b/bench-viewer/Cargo.toml
@@ -9,3 +9,8 @@ default-run = "bench_viewer"
 [dependencies]
 eframe = "0.19"
 web-sys = "0.3"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+tracing-wasm = "0.2"
+wasm-bindgen = "0.2"
