--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-    "ussal-bench-viewer",
+    "ussal-viewer",
     "ussal-shared",
     "ussal-bencher",
     "run-wasm",
