--- a/ussal-viewer/Cargo.toml
+++ b/ussal-viewer/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "ussal_bench_viewer"
+name = "ussal_viewer"
 version = "0.1.0"
 edition = "2021"
-default-run = "ussal_bench_viewer"
+default-run = "ussal_viewer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
