--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -2,8 +2,11 @@
 name = "ussal_bencher"
 version = "0.1.0"
 edition = "2021"
+default-run = "ussal_bencher"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ussal_shared = { path = "../ussal-shared" }
+subprocess = "0.2.7"
+wasm-bindgen-cli-support = "0.2.78"
