--- a/.github/workflows/publish_to_pages.yml
+++ b/.github/workflows/publish_to_pages.yml
@@ -61,7 +61,8 @@ jobs:
       run: |
         mkdir -p ussal-bencher/bench_ci_web_root
         cd ussal-bencher/bench_ci_web_root
-        wget ${{ steps.setup_pages.outputs.base_url }}/bench_history.cbor
+        # Disable until we have a vaguely stable format
+        #wget ${{ steps.setup_pages.outputs.base_url }}/bench_history.cbor
       continue-on-error: true
     - name: Generate pages
       run: |
