--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -11,3 +11,14 @@ ussal_shared = { path = "../ussal-shared" }
 subprocess = "0.2.7"
 wasm-bindgen-cli-support = "0.2.78"
 log = "0.4"
+tokio = { version = "1.27.0", features = ["full"] }
+futures-util = "0.3.28"
+tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
+clap = { version = "4.2.2", features = ["derive"] }
+tracing-appender = "0.2.2"
+tracing-subscriber = "0.3.16"
+tracing = "0.1.37"
+url = "2.3.1"
+serde_cbor = "0.11.2"
+anyhow = "1.0.70"
+uuid = { version = "1.3.1", features = ["v4"] }
