--- a/ussal-runner/Cargo.toml
+++ b/ussal-runner/Cargo.toml
@@ -6,16 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5.15"
+anyhow = "1.0.70"
+axum = { version = "0.5.15", features = ["ws"] }
 axum-server = "0.4.7"
 clap = { version = "4.2.2", features = ["derive"] }
 dirs-next = "2.0.0"
+futures = "0.3.28"
 rustls = "0.20.0"
 rustls-acme = { version = "0.6.0", features = ["axum"] }
 serde = { version = "1.0.160", features = ["derive"] }
+serde_cbor = "0.11.2"
 serde_json = "1.0.96"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-stream = "0.1.12"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
+ussal_shared = { path = "../ussal-shared" }
+uuid = { version = "1.3.1", features = ["v4", "serde"] }
+
