--- a/ussal-shared/Cargo.toml
+++ b/ussal-shared/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1"
-serde_derive = "1.0.144"
+serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
+uuid = { version = "1.3.1", features = ["v4", "serde"] }
+getrandom = { version = "0.2.9", features = ["js"] }
