--- a/ussal-runner/Cargo.toml
+++ b/ussal-runner/Cargo.toml
@@ -24,4 +24,5 @@ tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
 ussal_shared = { path = "../ussal-shared" }
 uuid = { version = "1.3.1", features = ["v4", "serde"] }
+subprocess = "0.2.7"
 
