--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -22,3 +22,11 @@ url = "2.3.1"
 serde_cbor = "0.11.2"
 anyhow = "1.0.70"
 uuid = { version = "1.3.1", features = ["v4"] }
+
+[dev-dependencies]
+criterion = "0.4.0"
+glam = "0.23.0"
+
+[[bench]]
+name = "glam_mat4"
+harness = false
