--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -22,10 +22,12 @@ url = "2.3.1"
 serde_cbor = "0.11.2"
 anyhow = "1.0.70"
 uuid = { version = "1.3.1", features = ["v4"] }
+tokio-bin-process = "0.1.0"
 
 [dev-dependencies]
 criterion = "0.4.0"
 glam = "0.24.0"
+serial_test = "2.0.0"
 
 [[bench]]
 name = "glam_mat4"
