--- a/ussal-runner/Cargo.toml
+++ b/ussal-runner/Cargo.toml
@@ -21,8 +21,10 @@ tokio = { version = "1.27.0", features = ["full"] }
 tokio-stream = "0.1.12"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
 ussal_shared = { path = "../ussal-shared" }
 uuid = { version = "1.3.1", features = ["v4", "serde"] }
 subprocess = "0.2.7"
+backtrace = "0.3.67"
+backtrace-ext = "0.2.1"
 
