--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "ussal_bencher"
+name = "ussal-bencher"
 version = "0.1.0"
 edition = "2021"
-default-run = "ussal_bencher"
+default-run = "ussal-bencher"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -22,12 +22,14 @@ url = "2.3.1"
 serde_cbor = "0.11.2"
 anyhow = "1.0.70"
 uuid = { version = "1.3.1", features = ["v4"] }
-tokio-bin-process = "0.1.0"
 
 [dev-dependencies]
 criterion = "0.4.0"
 glam = "0.24.0"
 serial_test = "2.0.0"
+
+[target.'cfg(unix)'.dev-dependencies]
+tokio-bin-process = { version = "0.1.0", git = "https://github.com/rukai/tokio-bin-process", branch = "fix_running_external_crates" }
 
 [[bench]]
 name = "glam_mat4"
