--- a/ussal-server/Cargo.toml
+++ b/ussal-server/Cargo.toml
@@ -26,4 +26,5 @@ uuid = { version = "1.3.1", features = ["v4", "serde"] }
 subprocess = "0.2.7"
 backtrace = "0.3.67"
 backtrace-ext = "0.2.1"
+notify = "5.1.0"
 
