--- a/ussal-server/Cargo.toml
+++ b/ussal-server/Cargo.toml
@@ -22,9 +22,11 @@ tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
 ussal_shared = { path = "../ussal-shared" }
+ussal-networking = { path = "../ussal-networking" }
 uuid = { version = "1.3.1", features = ["v4", "serde"] }
 subprocess = "0.2.7"
 backtrace = "0.3.67"
 backtrace-ext = "0.2.1"
 notify = "5.1.0"
+tokio-tungstenite = "0.18.0"
 
