--- a/ussal-server/Cargo.toml
+++ b/ussal-server/Cargo.toml
@@ -6,27 +6,28 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.70"
-axum = { version = "0.6.0", features = ["ws"] }
 axum-server = "0.4.7"
-clap = { version = "4.2.2", features = ["derive"] }
 dirs-next = "2.0.0"
 futures = "0.3.28"
 rustls-acme = { version = "0.6.0", features = ["axum"] }
-serde = { version = "1.0.160", features = ["derive"] }
-serde_cbor = "0.11.2"
 serde_json = "1.0.96"
-tokio = { version = "1.27.0", features = ["full"] }
 tokio-stream = "0.1.12"
-tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
 ussal_shared = { path = "../ussal-shared" }
 ussal-networking = { path = "../ussal-networking" }
-uuid = { version = "1.3.1", features = ["v4", "serde"] }
-subprocess = "0.2.7"
 backtrace = "0.3.67"
 backtrace-ext = "0.2.1"
 notify = "5.1.0"
-tokio-tungstenite = "0.18.0"
 
+uuid.workspace = true
+futures-util.workspace = true
+axum.workspace = true
+serde.workspace = true
+serde_cbor.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+anyhow.workspace = true
+clap.workspace = true
+tokio-tungstenite.workspace = true
+subprocess.workspace = true
