--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ futures-util = "0.3.28"
 serde_cbor = "0.11.2"
 uuid = { version = "1.3.1", features = ["v4", "serde"] }
 subprocess = "0.2.7"
+serde_json = "1.0.96"
