--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -23,6 +23,8 @@ tracing.workspace = true
 anyhow.workspace = true
 clap.workspace = true
 tokio-tungstenite.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 
 [dev-dependencies]
 criterion = "0.4.0"
