--- a/ussal-server/Cargo.toml
+++ b/ussal-server/Cargo.toml
@@ -10,7 +10,6 @@ axum-server = "0.4.7"
 dirs-next = "2.0.0"
 futures = "0.3.28"
 rustls-acme = { version = "0.6.0", features = ["axum"] }
-serde_json = "1.0.96"
 tokio-stream = "0.1.12"
 tracing-appender = "0.2.2"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
@@ -24,6 +23,7 @@ uuid.workspace = true
 futures-util.workspace = true
 axum.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 serde_cbor.workspace = true
 tokio.workspace = true
 tracing.workspace = true
