--- a/ussal-bencher/ussal-viewer-web/Cargo.toml
+++ b/ussal-bencher/ussal-viewer-web/Cargo.toml
@@ -11,7 +11,9 @@ ussal_shared = { path = "../../ussal-shared" }
 ussal_viewer = { path = "../../ussal-viewer" }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3.55"
-eframe = "0.21"
+eframe = "0.22"
+# just needed to force enable webgl support for egui
+wgpu = { version = "0.16.0", features = ["webgl"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -30,7 +32,6 @@ features = [
 ]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen = "0.2"
 
