Implement CI history merging

--- a/ussal-shared/Cargo.toml
+++ b/ussal-shared/Cargo.toml
@@ -10,3 +10,4 @@ serde.workspace = true
 serde_cbor.workspace = true
 uuid.workspace = true
 getrandom = { version = "0.2.9", features = ["js"] }
+anyhow.workspace = true
