--- a/.github/workflows/publish_to_pages.yml
+++ b/.github/workflows/publish_to_pages.yml
@@ -56,7 +56,7 @@ jobs:
         mkdir -p ussal-bencher/bench_ci_web_root
         cd ussal-bencher/bench_ci_web_root
         # Disable until we have a vaguely stable format
-        #wget ${{ steps.setup_pages.outputs.base_url }}/bench_history.cbor
+        wget ${{ steps.setup_pages.outputs.base_url }}/bench_history.cbor
       continue-on-error: true
     - name: Run benches
       run: |
