--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -25,6 +25,7 @@ clap.workspace = true
 tokio-tungstenite.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+cargo_metadata = "0.15.4"
 
 [dev-dependencies]
 criterion = "0.5.0"
