Move protocols into networking crate

--- a/ussal-networking/Cargo.toml
+++ b/ussal-networking/Cargo.toml
@@ -10,6 +10,7 @@ serde_cbor.workspace = true
 futures-util.workspace = true
 axum.workspace = true
 serde.workspace = true
+uuid.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 anyhow.workspace = true
