--- a/ussal-bencher/Cargo.toml
+++ b/ussal-bencher/Cargo.toml
@@ -28,7 +28,7 @@ serde_json.workspace = true
 cargo_metadata = "0.15.4"
 
 [dev-dependencies]
-criterion = "0.5.0"
+criterion = { version = "0.5.0", default-features = false }
 glam = "0.24.0"
 serial_test = "2.0.0"
 
