--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /target
-/ussal-bencher/ussal-viewer-web/target
-ussal-bencher/bench_ci_web_root
-ussal-bencher/bench.cbor
+/ussal-client/ussal-viewer-web/target
+/ussal-client/bench_ci_web_root
+/ussal-client/bench.cbor
