--- a/ussal-client/Cargo.toml
+++ b/ussal-client/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "ussal-bencher"
+name = "ussal-client"
 version = "0.1.0"
 edition = "2021"
-default-run = "ussal-bencher"
+default-run = "ussal-client"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
