--- a/ussal-client/ussal-viewer-web/Cargo.toml
+++ b/ussal-client/ussal-viewer-web/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ussal_viewer_web"
+name = "ussal-viewer-web"
 version = "0.1.0"
 edition = "2021"
 resolver = "2"
@@ -7,8 +7,8 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ussal_shared = { path = "../../ussal-shared" }
-ussal_viewer = { path = "../../ussal-viewer" }
+ussal-shared = { path = "../../ussal-shared" }
+ussal-viewer = { path = "../../ussal-viewer" }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3.55"
 eframe = "0.22"
