--- a/ussal-viewer/Cargo.toml
+++ b/ussal-viewer/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ussal_viewer"
+name = "ussal-viewer"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ussal_shared = { path = "../ussal-shared" }
+ussal-shared = { path = "../ussal-shared" }
 eframe = "0.22"
 web-sys = "0.3"
 
