Rename ussal-shared -> ussal-archive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
     "ussal-viewer",
-    "ussal-shared",
+    "ussal-archive",
     "ussal-client",
     "ussal-server",
     "ussal-networking",
