--- a/ussal-client/ussal-viewer-web/Cargo.toml
+++ b/ussal-client/ussal-viewer-web/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ussal-shared = { path = "../../ussal-shared" }
+ussal-archive = { path = "../../ussal-archive" }
 ussal-viewer = { path = "../../ussal-viewer" }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3.55"
