--- a/ussal-viewer/Cargo.toml
+++ b/ussal-viewer/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ussal-shared = { path = "../ussal-shared" }
+ussal-archive = { path = "../ussal-archive" }
 eframe = "0.22"
 web-sys = "0.3"
 
