--- a/ussal-client/ussal-config.json
+++ b/ussal-client/ussal-config.json
@@ -4,8 +4,8 @@
     "reset_ci_history": 0,
     "runs": [
         {
-            "machine_type": "x86_64-linux-memes",
-            "target_triple": "x86_64-unknown-linux-gnu"
+            "machine_type": "aarch64-linux-rpi4",
+            "target_triple": "aarch64-unknown-linux-musl"
         }
     ]
 }
